--- a/bootloader/atmega328/Makefile
+++ b/bootloader/atmega328/Makefile
@@ -2,15 +2,13 @@ AVRDUDE = /Applications/Arduino.app/Contents/Java/hardware/tools/avr/bin/avrdude
 AVRDUDEFLAGS = -b 19200 -C /Applications/Arduino.app/Contents/Java/hardware/tools/avr/etc/avrdude.conf -c avrispmkII -p m328p -v
 BOOTLOADER = optiboot_atmega328.hex
 
-all: fuses install
+all: read
 
 fuses:
-	${AVRDUDE} ${AVRDUDEFLAGS} -U efuse:w:0x05:m
-	${AVRDUDE} ${AVRDUDEFLAGS} -U hfuse:w:0xD6:m
-	${AVRDUDE} ${AVRDUDEFLAGS} -U lfuse:w:0xFF:m
+	${AVRDUDE} ${AVRDUDEFLAGS} -e -U efuse:w:0x05:m -U hfuse:w:0xD6:m -U lfuse:w:0xFF:m
 
-install:
-	${AVRDUDE} ${AVRDUDEFLAGS} -U flash:w:${BOOTLOADER}:a
+install: fuses
+	${AVRDUDE} ${AVRDUDEFLAGS} -V -U flash:w:${BOOTLOADER}
 	${AVRDUDE} ${AVRDUDEFLAGS} -U lock:w:0x0F:m
 
 read:
